@@ -30,6 +30,45 @@ class TestQuery(unittest.TestCase):
         self.assertEqual(result.queries[0], a)
         self.assertEqual(result.queries[1], b)
 
+    def test_and_query_should_not_change_after_optimize(self):
+        from . import And, Or, Eq, Any
+        states_query = Or(Eq('states', 'published'), Eq('states', 'archived'))
+        query = And(states_query, Eq('content_types', 'event'))
+        op = query._optimize()
+        self.assertTrue(isinstance(op, And))
+        self.assertTrue(isinstance(op.queries[0], Any))
+        self.assertTrue(isinstance(op.queries[1], Eq))
+        self.assertEqual(op.queries[0].index, 'states')
+        self.assertEqual(op.queries[0]._value, ['published', 'archived'])
+        self.assertEqual(op.queries[1].index, 'content_types')
+        self.assertEqual(op.queries[1]._value, 'event')
+        # and_query should not have been modified
+        # this is needed because query optimization can be more aggressive than
+        # just replace Or(Eq, Eq) by Any. Here is an example:
+        # reusable_query = And(Any1, Any3, Any4)
+        # query = Or(And(Any1, Any2), reusable_query)
+        # An optimization can be a factorization like this:
+        # And(Any1, Or(Any2, And(Any3, Any4)))
+        # We don't want reusable_query to be equal to And(Any3, Any4) now,
+        # because it can be used in another query later...
+        self.assertTrue(isinstance(query.queries[0], Or))
+        self.assertTrue(isinstance(query.queries[1], Eq))
+
+    def test_or_query_should_not_change_after_optimize(self):
+        from . import And, Or, Eq, All
+        states_query = And(Eq('states', 'published'), Eq('states', 'archived'))
+        query = Or(states_query, Eq('content_types', 'event'))
+        op = query._optimize()
+        self.assertTrue(isinstance(op, Or))
+        self.assertTrue(isinstance(op.queries[0], All))
+        self.assertTrue(isinstance(op.queries[1], Eq))
+        self.assertEqual(op.queries[0].index, 'states')
+        self.assertEqual(op.queries[0]._value, ['published', 'archived'])
+        self.assertEqual(op.queries[1].index, 'content_types')
+        self.assertEqual(op.queries[1]._value, 'event')
+        self.assertTrue(isinstance(query.queries[0], And))
+        self.assertTrue(isinstance(query.queries[1], Eq))
+
     def test_and_type_error(self):
         a = self._makeOne()
         self.assertRaises(TypeError, a.__and__, 2)
